# veyrnox

./: .env.example  .gitattributes  .gitignore  AGENTS.md  BROWSERSTACK_QUICKSTART.md  BROWSERSTACK_SETUP.md  CHANGELOG.md  CLAUDE.md  EXECUTION-PLAN-PHASE1-UAT.md  LICENSE  MOBILE-BUILD-READY.md  PHASE1-DELIVERY-SUMMARY.md  PHASE1-EXECUTION-SUMMARY.md  PRODUCT.md  README.md  SECURITY.md  TESTING_SETUP.md  WEBAUTHN_DELIVERY.md  WEBAUTHN_TESTING.md  agentdb.rvf  capacitor.config.json  capacitor.config.ts  eslint.config.js  index.html  jsconfig.json  jsconfig.wallet-core.json  node_modules  package-lock.json  package.json  playwright.config.ts  scratch_suite.txt  start-device-verification.ps1  start-device-verification.sh  tailwind.config.js  uat_report.html  vercel.json  vite.config.js  vitest.config.js  vitest.setup.js
.claude/: context-resume-20260624-mac.md  launch.json  settings.json
.claude-flow/: CAPABILITIES.md  config.yaml  memory-package.json
.githooks/: pre-commit
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.impeccable/: hook.cache.json
android/: HARDWARE_KEK_VERIFICATION.md  UPLOAD-KEY-README.md  capacitor.settings.gradle  gradle.properties  keystore.properties.template  settings.gradle
android/app/src/main/cpp/: CMakeLists.txt  rasp_early.c
base44/: .app.jsonc
dist-release/: index.html
docs/: Audit.scope.md  Backend-security-architecture.md  CLAUDE-audit-archive.md  CLAUDE_CODE_TASK.md  CryptoSigning-key-handling-decision.md  CustomerDiscovery.md  DEVICE_VERIFICATION.md  Feature-Status.md  FutureFeatures.roadmap.md  PhaseBTC.md  (+130 more)
(+1663 files in other folders)
